--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dateformat": "^3.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap-typeahead": "^5.0.0-rc.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
